tests/ui/inline-const/required-const.stderr
error[E0080]: evaluation of `foo::<i32>::{constant#0}` failed
  --> $DIR/required-const.rs:7:17
   |
LL |         const { panic!() }
   |                 ^^^^^^^^ the evaluated program panicked at 'explicit panic', $DIR/required-const.rs:7:17
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
